[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/scenes/Main.gd" type="Script" id=1]
[ext_resource path="res://src/resources/Themes.tres" type="Theme" id=2]
[ext_resource path="res://src/resources/fonts/helvetica-rounded-bold-5871d05ead8de.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_top = 0.102
anchor_right = 1.0
anchor_bottom = 0.102
margin_top = -0.200005
margin_bottom = 157.8
theme = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "

[center][b][color=black]Organizador 
3000[/color][/b][/center]"
text = "

Organizador 
3000"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -173.0
margin_top = 43.0
margin_right = 173.0
margin_bottom = 128.0
theme = ExtResource( 2 )
custom_constants/separation = 32

[node name="search" type="Button" parent="HBoxContainer"]
margin_right = 157.0
margin_bottom = 85.0
rect_min_size = Vector2( 157, 0 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Procurar"

[node name="add" type="Button" parent="HBoxContainer"]
margin_left = 189.0
margin_right = 346.0
margin_bottom = 85.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Adicionar"

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -82.0
margin_top = -13.0
theme = ExtResource( 2 )
text = "V250923-1529"

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="button_up" from="HBoxContainer/search" to="." method="_on_search_button_up"]
[connection signal="button_up" from="HBoxContainer/add" to="." method="_on_add_button_up"]
